umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_u.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {:output {:atoms ["U#n#u4"] :bonds [] :charge 0 :spin "#u4#s5"} :success true}
  :counts {:output {:atoms ["U#n3"] :bonds [] :charge 0 :spin "#u0#s1"} :success true}}
