umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_v.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "V#n#u3"} :bonds [] :charge 0 :spin "#u3 #s4"}} :counts {:success true :output {:atoms {"0" "V#n2#u"} :bonds [] :charge 0 :spin "#u1 #s2"}}}
