umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_xe.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Xe"] :bonds []} :success true}
  :counts {:output {:atoms ["Xe#n4"] :bonds []} :success true}}
